# OpenGL

Aplicacion/: CMakeLists.txt  main.cpp  main.h
Aplicacion/Core/: Aplicacion.cpp  Aplicacion.h  Window.cpp  Window.h
Aplicacion/Game/: Game.cpp  Game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h
Aplicacion/Utils/: Shader.cpp  Shader.h  resource_manager.cpp  resource_manager.h  sprite_renderer.cpp  sprite_renderer.h  texture.cpp  texture.h
Camara/: CMakeLists.txt  camera.h  main.cpp
Coordenadas/: CMakeLists.txt  main.cpp
Coordenadas/shaders/: shader.fs
Iluminacion/Colors/: CMakeLists.txt  camera.cpp  main.cpp
Iluminacion/IluminacionBasica/: CMakeLists.txt  Shader.cpp  camera.cpp  main.cpp
Iluminacion/IluminacionBasica/shaders/: shaderColors.fs  shaderColors.vs
Iluminacion/LuzDireccional/: CMakeLists.txt  camera.h  main.cpp
Iluminacion/LuzDireccional/shaders/: shaderColors.fs
Iluminacion/MapeadoLuces/: CMakeLists.txt  main.cpp
Iluminacion/MapeadoLuces/shaders/: shaderColors.fs
Iluminacion/Materials/: CMakeLists.txt  Shader.h  main.cpp
Iluminacion/Materials/shaders/: shaderColors.fs
Iluminacion/MultiplesLuces/: CMakeLists.txt  camera.cpp  glad.c  main.cpp
Iluminacion/MultiplesLuces(Ejemplo)/: CMakeLists.txt  imgui.ini  imgui_impl_glfw_gl3.cpp  main.cpp  main.h  ui.cpp  ui.h
Iluminacion/MultiplesLuces(Ejemplo)/glad/include/glad/: glad.h
Iluminacion/MultiplesLuces(Ejemplo)/shaders/: shaderColors.vs
Iluminacion/MultiplesLuces/shaders/: shaderColors.fs
Shaders/: CMakeLists.txt  main.cpp
Texturas/: CMakeLists.txt  KeyBoard.cpp  KeyBoard.h  Shader.cpp  Shader.h  main.cpp
Texturas/shaders/: shader.fs
Triangulo/: CMakeLists.txt  main.cpp
